# cryptid_model

./: NTS.py  README.md  TM.py  filters.py  generator.py  laconic_interface.py  pyproject.toml  readme.txt  requirements.txt  tester.py
cryptid_model.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cryptid_model/features/: dynamics.py  featurize.py  graph.py  invariants.py
cryptid_model/models/: contrastive.py
cryptid_model/run/: runner_basic.py  seeds.py
cryptid_model/specs/: NTS.py  ir.py  pam.py
cryptid_model/tm/: convert_bb.py  generators.py  io.py  tm.py
cryptid_model/tools/: try_ir.py
cryptid_model/ui/: simple_gui.py
data/features/: demo.csv
data/tms/: demo.json
data/traces/: demo.json
scripts/: extract_features.py  print_tm.py  run_tm.py
