# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptid_model"
version = "0.0.1"
description = "Structure discovery between Turing machines and number-theory problems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cryptid_model*"]
